# poker_game_visualizer

./: .gitignore  README.md
poker-tournament-server/: bots.csv  bots_2.csv  bots_fra_turnering.7z  code_fetcher.py  poker-angular.nginx.conf  poker-ws.nginx.conf  sample_bots.csv  server.py  tunering.csv
poker-tournament-server/bots/20220409-102136/VirtualSatai-HurtfulGrayProjectfork/: main.py  mybot.py  pyproject.toml
poker-tournament-server/bots/20220428-154302/1/VirtualSatai-HurtfulGrayProjectfork/: pyproject.toml
poker-tournament-visualization/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
poker-tournament-visualization/src/: .eslintrc.json  index.html  styles.css
poker-tournament-visualization/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
poker-tournament-visualization/src/app/card-group/: card-group.component.css  card-group.component.html  card-group.component.spec.ts  card-group.component.ts
poker-tournament-visualization/src/app/chips/: chips.component.css  chips.component.html  chips.component.spec.ts  chips.component.ts
poker-tournament-visualization/src/app/control-panel/: control-panel.component.css  control-panel.component.html  control-panel.component.ts  control-panel.module.ts
poker-tournament-visualization/src/app/poker-action/: poker-action.component.html  poker-action.component.spec.ts  poker-action.component.ts
poker-tournament-visualization/src/environments/: environment.prod.ts  environment.ts
(+38 files in other folders)
